// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Checkbox can be checked 1`] = `
.c2 {
  display: inline-block;
  height: 0.875rem;
  width: 0.875rem;
  line-height: 0;
}

.c3 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .c1 {
  -webkit-transition: opacity 100ms ease-in-out;
  transition: opacity 100ms ease-in-out;
  opacity: 0;
}

.c5 .c1 {
  -webkit-transition: opacity 100ms ease-in-out;
  transition: opacity 100ms ease-in-out;
  opacity: 0;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: thin solid #808080;
  border-radius: 2px;
  color: #602D6C;
  background-color: white;
  height: 1.375rem;
  width: 1.375rem;
  cursor: pointer;
  opacity: 1;
}

.c0 .c1 {
  -webkit-transition: opacity 100ms ease-in-out;
  transition: opacity 100ms ease-in-out;
  opacity: 1;
}

<label
  checked={true}
  className="anchor-toggle c0"
  color="primary.base"
  size="1.375rem"
>
  <span
    className="anchor-icon check c1 c2"
    scale="sm"
  >
    <svg
      height={14}
      viewBox="0 0 16 16"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <path
          d="M14.627 5.133l-7.637 7.5a1.282 1.282 0 0 1-1.8 0l-3.817-3.75a1.235 1.235 0 0 1 0-1.768 1.288 1.288 0 0 1 1.799 0L6.09 9.982l6.737-6.617a1.291 1.291 0 0 1 1.8 0c.496.488.496 1.28 0 1.768"
          fill="currentColor"
        />
      </g>
    </svg>
  </span>
  <input
    checked={true}
    className="c3"
    type="checkbox"
  />
</label>
`;

exports[`Component: Checkbox should be defined 1`] = `
.c2 {
  display: inline-block;
  height: 0.875rem;
  width: 0.875rem;
  line-height: 0;
}

.c3 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: thin solid #808080;
  border-radius: 2px;
  color: #602D6C;
  background-color: white;
  height: 1.375rem;
  width: 1.375rem;
  cursor: pointer;
  opacity: 1;
}

.c0 .c1 {
  -webkit-transition: opacity 100ms ease-in-out;
  transition: opacity 100ms ease-in-out;
  opacity: 0;
}

<label
  className="anchor-toggle c0"
  color="primary.base"
  size="1.375rem"
>
  <span
    className="anchor-icon check c1 c2"
    scale="sm"
  >
    <svg
      height={14}
      viewBox="0 0 16 16"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <path
          d="M14.627 5.133l-7.637 7.5a1.282 1.282 0 0 1-1.8 0l-3.817-3.75a1.235 1.235 0 0 1 0-1.768 1.288 1.288 0 0 1 1.799 0L6.09 9.982l6.737-6.617a1.291 1.291 0 0 1 1.8 0c.496.488.496 1.28 0 1.768"
          fill="currentColor"
        />
      </g>
    </svg>
  </span>
  <input
    className="c3"
    type="checkbox"
  />
</label>
`;

exports[`Component: Checkbox should be disableable 1`] = `
.c2 {
  display: inline-block;
  height: 0.875rem;
  width: 0.875rem;
  line-height: 0;
}

.c3 {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .c1 {
  -webkit-transition: opacity 100ms ease-in-out;
  transition: opacity 100ms ease-in-out;
  opacity: 0;
}

.c0 {
  box-sizing: border-box;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border: thin solid #808080;
  border-radius: 2px;
  color: #602D6C;
  background-color: #F1F1F1;
  height: 1.375rem;
  width: 1.375rem;
  cursor: default;
  opacity: 0.4;
}

.c0 .c1 {
  -webkit-transition: opacity 100ms ease-in-out;
  transition: opacity 100ms ease-in-out;
  opacity: 0;
}

<label
  className="anchor-toggle c0"
  color="primary.base"
  disabled={true}
  size="1.375rem"
>
  <span
    className="anchor-icon check c1 c2"
    scale="sm"
  >
    <svg
      height={14}
      viewBox="0 0 16 16"
      width={14}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h16v16H0z"
        />
        <path
          d="M14.627 5.133l-7.637 7.5a1.282 1.282 0 0 1-1.8 0l-3.817-3.75a1.235 1.235 0 0 1 0-1.768 1.288 1.288 0 0 1 1.799 0L6.09 9.982l6.737-6.617a1.291 1.291 0 0 1 1.8 0c.496.488.496 1.28 0 1.768"
          fill="currentColor"
        />
      </g>
    </svg>
  </span>
  <input
    className="c3"
    disabled={true}
    type="checkbox"
  />
</label>
`;
